--- a/app/src/main/res/drawable/line_gray.xml
+++ b/app/src/main/res/drawable/line_gray.xml
@@ -2,6 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="line">
     <stroke
-        android:color="#f0f0f0"
-        android:width="1dp"/>
+        android:color="#e0e0e0"
+        android:width="0.5dp"/>
+    <size
+        android:height="20dp"/>
 </shape>
