--- a/app/src/main/res/drawable/line_green.xml
+++ b/app/src/main/res/drawable/line_green.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="line">
+    <soild android:color="@color/colorGreen"/>
     <stroke
         android:color="@color/colorGreen"
-        android:width="1dp"/>
+        android:width="0.5dp"/>
+
+    <size android:height="20dp"/>
 </shape>
