--- a/app/src/main/res/drawable/password_show_selector.xml
+++ b/app/src/main/res/drawable/password_show_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-   <item android:state_checked="true" android:drawable="@mipmap/icon_view_pwd_selected"/>
-    <item android:drawable="@mipmap/icon_view_pwd_normal"/>
+   <item android:state_checked="true" android:drawable="@mipmap/tab_finds_selected"/>
+    <item android:drawable="@mipmap/tab_finds_normal"/>
 </selector>
