--- a/app/src/main/res/layout/activity_base_layout.xml
+++ b/app/src/main/res/layout/activity_base_layout.xml
@@ -2,11 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
+    android:fitsSystemWindows="true">
     <include
         layout="@layout/layout_title_bar"/>
+    <com.htt.personallife.views.widgets.LoadingLayout
+        android:id="@+id/layout_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorWhite"/>
     <FrameLayout
         android:id="@+id/layout_content_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/colorWhite"/>
 </LinearLayout>
