--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginRight="12dp"
         android:layout_marginTop="12dp">
         <LinearLayout
             android:layout_width="0dp"
@@ -32,20 +32,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
+                    android:inputType="text"
                     android:textSize="14sp"
                     android:hint="昵称(至少由2个字符组成)"/>
             </LinearLayout>
             <ImageView
+                android:id="@+id/line_user_name"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/colorGreen"/>
+                android:background="@drawable/line_green_selector"/>
         </LinearLayout>
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="5dp"
             android:src="@mipmap/icon_cream_header"
-            android:background="#e0e0e0"/>
+            android:background="#f0f0f0"/>
     </LinearLayout>
 
     <LinearLayout
@@ -53,7 +55,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginRight="12dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -79,7 +81,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#f0f0f0"/>
+            android:background="@drawable/line_green_selector"/>
     </LinearLayout>
 
     <LinearLayout
@@ -87,7 +89,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginRight="12dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -104,13 +106,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:inputType="phone"
                 android:textSize="14sp"
                 android:hint="你的手机号码"/>
         </LinearLayout>
         <ImageView
+            android:id="@+id/line_user_phone"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#f0f0f0"/>
+            android:background="@drawable/line_green_selector"/>
     </LinearLayout>
 
     <LinearLayout
@@ -118,7 +122,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginRight="12dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -136,6 +140,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@null"
+                android:inputType="textPassword"
                 android:textSize="14sp"
                 android:hint="密码(至少由6个字母或数字组成)"/>
             <CheckBox
@@ -146,9 +151,10 @@
                 android:button="@drawable/password_show_selector" />
         </LinearLayout>
         <ImageView
+            android:id="@+id/line_user_password"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#f0f0f0"/>
+            android:background="@drawable/line_green_selector"/>
     </LinearLayout>
 
     <Button
