--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="12dp"
-        android:layout_marginTop="12dp">
+        android:layout_marginTop="15dp">
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="60dp"
@@ -43,6 +43,7 @@
                 android:background="@drawable/line_green_selector"/>
         </LinearLayout>
         <ImageView
+            android:id="@+id/iv_user_header"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="5dp"
