--- a/app/src/main/res/layout/fragment_base_layout.xml
+++ b/app/src/main/res/layout/fragment_base_layout.xml
@@ -3,5 +3,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <com.htt.personallife.views.widgets.LoadingLayout
+        android:id="@+id/layout_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorWhite"/>
+    <FrameLayout
+        android:id="@+id/layout_content_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
