--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -48,6 +48,7 @@
             android:layout_height="60dp"
             android:layout_marginLeft="5dp"
             android:src="@mipmap/icon_cream_header"
+            android:scaleType="fitXY"
             android:background="#f0f0f0"/>
     </LinearLayout>
 
