--- a/app/src/main/res/layout/layout_message_record_content_item.xml
+++ b/app/src/main/res/layout/layout_message_record_content_item.xml
@@ -6,7 +6,8 @@
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
     android:paddingLeft="15dp"
-    android:paddingRight="15dp">
+    android:paddingRight="15dp"
+    android:background="#ffffff">
     <FrameLayout
         android:layout_width="55dp"
         android:layout_height="55dp">
