--- a/app/src/main/res/layout/fragment_message_pager.xml
+++ b/app/src/main/res/layout/fragment_message_pager.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.htt.personallife.views.widgets.swipemenu.SwipeMenuRecyclerView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/message_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
