--- a/imuilibrary/src/main/res/values/dimens.xml
+++ b/imuilibrary/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="verticalspit_view_width">0.6dp</dimen>
     <dimen name="horizontalspit_view_height">0.6dp</dimen>
     <dimen name="item_emoticon_size_default">32dp</dimen>
+    <dimen name="item_emoticon_size_big">60dp</dimen>
 </resources>
