--- a/imuilibrary/src/main/res/layout/layout_chat_input_edit.xml
+++ b/imuilibrary/src/main/res/layout/layout_chat_input_edit.xml
@@ -84,7 +84,6 @@
                 android:layout_height="34dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="8dp"
                 android:layout_marginLeft="5dp"
                 android:src="@mipmap/icon_face_nomal" />
         </RelativeLayout>
@@ -97,6 +96,7 @@
             android:layout_centerVertical="true"
             android:focusableInTouchMode="true"
             android:orientation="horizontal"
+            android:layout_marginLeft="8dp"
             android:layout_marginRight="12dp">
             <!--apps 功能-->
             <ImageView
