--- a/imuilibrary/src/main/res/layout/layout_emoticon_view.xml
+++ b/imuilibrary/src/main/res/layout/layout_emoticon_view.xml
@@ -30,6 +30,7 @@
         android:id="@+id/view_spit"
         android:layout_width="match_parent"
         android:layout_height="@dimen/horizontalspit_view_height"
+        android:background="@color/line_color"
         android:layout_above="@+id/view_etv" />
 
     <com.htt.imlibrary.views.widget.EmoticonsToolBarView
