--- a/imuilibrary/src/main/res/layout/layout_chat_input_edit.xml
+++ b/imuilibrary/src/main/res/layout/layout_chat_input_edit.xml
@@ -114,7 +114,7 @@
                 android:background="@drawable/btn_send_bg_disable"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:text="send"
+                android:text="发送"
                 android:textColor="@color/white"
                 android:textSize="12sp"
                 android:visibility="gone" />
