--- a/imuilibrary/src/main/res/layout/layout_voice_record.xml
+++ b/imuilibrary/src/main/res/layout/layout_voice_record.xml
@@ -4,12 +4,12 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:padding="20dp"
+    android:padding="26dp"
     android:background="@drawable/voice_record_windows">
     <ImageView
         android:id="@+id/iv_record_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="90dp"
         android:src="@mipmap/voice_1"/>
 
     <TextView
@@ -22,5 +22,4 @@
         android:layout_marginTop="16dp"
         android:text="手指上滑,取消录制"
         android:textSize="16sp" />
-
 </LinearLayout>
