--- a/imuilibrary/src/main/res/values/attrs.xml
+++ b/imuilibrary/src/main/res/values/attrs.xml
@@ -7,4 +7,8 @@
 
         <attr name="bmpSelect" format="reference" />
     </declare-styleable>
+
+    <declare-styleable name="ChatExtendMenuView">
+        <attr name="numColumns" format="integer"/>
+    </declare-styleable>
 </resources>
